# exercise-7

./: Commentary.md  SOLUTION.md  ant-colony.py  ant.py  environment.py
C_version/: Ant.cpp  Ant.h  Ant_colony.cpp  CMakeLists.txt  environment.cpp  environment.h
Py_version/: ant-colony.py  ant.py  environment.py
pdf/: Summary.tex
release/: AntColonyOptimization_Arm64
